2010-07-09 Braden McDaniel  <braden@endoframe.com>

	Removed OPENVRML_API from event listener/emitter class templates.

	These trigger "inconsistent dll linkage" warnings from the
	Microsoft compiler.  For gcc's purposes, forcing symbol visibility
	for templates should be unnecessary.

	* src/libopenvrml/openvrml/event.h
	(field_value_listener): Removed OPENVRML_API.
	(field_value_emitter): Removed OPENVRML_API.

2010-07-09 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/local/parse_vrml.h
	(openvrml::local::x3d_vrml_parse_actions::on_mfdouble): Added
	semantic action for mfdouble.

2010-07-09 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/image_texture.cpp
	(image_texture_node::do_render_texture(openvrml::viewer &)): Lock
	the image_mutex_ before rendering the texture.

2010-06-06 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/x3d_vrml_grammar.h: Added MFDouble
	parsing.

2010-06-02 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.6 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* src/Makefile.am
	(LIBOPENVRML_LIBRARY_VERSION): Update to 9:4:0.

2010-05-28 Braden McDaniel  <braden@endoframe.com>

	Use jpeg_decompress_struct.out_color_components to determine the
	scan line buffer size.  This addresses a memory corruption issue
	when reading grayscale JPEGs.

	* src/node/vrml97/image_stream_listener.cpp
	(openvrml_node_vrml97::image_stream_listener::jpeg_reader::do_read(const
	std::vector<unsigned char> &)): Use
	jpeg_decompress_struct.out_color_components to determine the scan
	line buffer size.  This member isn't set until after the call to
	jpeg_start_decompress; so move the buffer allocation to the
	start_decompress section.

2010-05-27 Braden McDaniel  <braden@endoframe.com>
