@@ -1,3 +1,8 @@
+2010-07-10 Braden McDaniel  <braden@endoframe.com>
+
+	* src/node/vrml97/text.cpp: Fixed to compile without
+	OPENVRML_ENABLE_RENDER_TEXT_NODE.
+
 2010-07-09 Braden McDaniel  <braden@endoframe.com>
 
 	Removed OPENVRML_API from event listener/emitter class templates.
